--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "license": "MIT",
   "version": "0.0.1",
   "main": "dist/index.js",
-  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "module": "dist/index.mjs",
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "lint": "tsc"
@@ -13,5 +13,8 @@
     "@changesets/cli": "^2.26.0",
     "tsup": "^6.5.0",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "date-fns": "^2.29.3"
   }
 }
